temp fix scroll to top button not showing on iOS

--- a/src/themes/style.css
+++ b/src/themes/style.css
@@ -233,3 +233,6 @@ code {
 	padding-top: 10rem;
 	padding-left: 1rem;
 }
+.scroll_to_top_temp {
+	margin-right: 0.25rem;
+}
